Update navigation links and button for 'Sobre nós'

--- a/Menu-inicial-sem-logar.html
+++ b/Menu-inicial-sem-logar.html
@@ -3023,6 +3023,7 @@
                 height: 16px;
             }
         }
+
     </style>
 </head>
 <body>
@@ -3077,7 +3078,7 @@
             <li class="nav-item"><a href="#news" class="nav-link">Sorteios</a></li>
             <li class="nav-item"><a href="config.html" class="nav-link">Configurações</a></li>
             <li class="nav-item"><a href="#sustentabilidade" class="nav-link">Blogs e dicaas</a></li>
-            <li class="nav-item"><a href="#historia" class="nav-link">Sobre nós</a></li>
+            <li class="nav-item"><a href="sobrenos.html" class="nav-link">Sobre nós</a></li>
         </ul>
     </nav>
 
@@ -3102,7 +3103,7 @@
                         <span class="sentence-2">A iniciativa busca aproximar a academia dos moradores, oferecendo um espaço digital onde é possível conhecer os serviços disponíveis, os horários de funcionamento, planos de treinamento, eventos e até dicas de exercícios e nutrição.</span> 
                         <span class="sentence-3">Além disso, a presença online fortalece a divulgação das academias e ajuda a população da cidade em questão de achar qual a academia mais próxima e custo benefício para você treinar!</span>
                     </p>
-                    <button class="start-button">Sobre nós</button>
+                  <a href="sobrenos.html">  <button class="start-button">Sobre nós</button> </a>
                 </div>
                 
                 <div class="workout-card">
@@ -3388,9 +3389,7 @@
             </div>
         </div>
     </section>
-    <section class="quatro">
-    
-    </section>
+   
     <footer class="academia-footer">
         <div class="academia-background">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
