Add external scripts for notifications and user management

--- a/painel-administrativo.html
+++ b/painel-administrativo.html
@@ -3157,5 +3157,12 @@
             applyFontSize(savedFontSize);
         }
     </script>
+    <script src="menu.js"></script>
+  <!-- 1. Sistema de Notificações Globais -->
+<script src="global-notifications.js"></script>
+<!-- 2. Gerenciador de Usuários -->
+<script src="user-manager.js"></script>
+<!-- 3. Header com Informações do Usuário -->
+<script src="user-header.js"></script>
 </body>
 </html>
